k8s/apps/storage/netbackup/policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-netbackup-gitea-out
spec:
  podSelector:
    matchLabels:
      app: netbackup
  policyTypes:
    - Egress
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: dev
        podSelector:
          matchLabels:
            app: gitea
